Fixing overflows and in turn stickies

--- a/src-docs/src/components/guide_components.scss
+++ b/src-docs/src/components/guide_components.scss
@@ -22,6 +22,10 @@ $guideZLevelHighest: $euiZLevel9 + 1000;
   }
 }
 
+.guidePageContent {
+  max-width: calc(100% - #{$guideSideNavWidth});
+}
+
 .guideSideNav {
   min-width: $guideSideNavWidth;
   overflow: hidden;
@@ -242,6 +246,10 @@ $guideZLevelHighest: $euiZLevel9 + 1000;
 @include euiBreakpoint('xs', 's') {
   .guideSideNav {
     width: 100%;
+  }
+
+  .guidePageContent {
+    max-width: 100%;
   }
 
   .guideSideNav__content {
