--- a/src/components/page/page_content/_page_content.scss
+++ b/src/components/page/page_content/_page_content.scss
@@ -1,7 +1,7 @@
 .euiPageContent {
   width: 100%;
   // Make sure that inner flex layouts don't get larger than this container
-  overflow: hidden;
+  // overflow: hidden;
 
   &.euiPageContent--verticalCenter {
     align-self: center;
